# DesafioIntuitiveCare

./: README.md  pyproject.toml  requirements.txt
src/app/: main.py
src/app/core/: configs.py
src/app/records/: expense.py  response.py
src/app/responses/: erros_response.py
src/app/services/: __init__.py  crawler.py  enrichment.py  processor.py
src/app/shared/: __init__.py  cnpj.py  registerANS.py  value.py
src/app/utils/: __init__.py  extract.py  get_page.py  save.py
src/app/views/: crawler_view.py  enrichment_view.py  processor_view.py
tests/records/: test_record.py
tests/shared/: test_cnpj.py  test_value.py
