[project]
name = "projetodespesas"
version = "1.0"
description = ""
authors = [
    {name = "João pedro",email = "jpbarroslima12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "validate-docbr (>=1.11.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
